refactor(backend): RequestScope taxonomy, shared publication workflow, dead-surface removal, test repairs
- RequestScope classifier replaces three divergent route taxonomies in
  TenantContextFilter + TenantMembershipGuardFilter; unknown /api/v1 routes
  now fail closed to member scope
- PublicationTexts / SubscriberNotificationGate / ScheduledPublishing extract
  the podcast↔newsletter workflow clones (~200 lines) into directwerk-common/core
- FeedTokenGenerator: feed-token randomness behind a tested collaborator
  (192-bit entropy, alphabet, uniqueness pinned by FeedTokenGeneratorTest)
- directwerk-webhook stub removed (queue consumer no producer ever fed)
- ArchUnit repository ban extended from two controller packages to all;
  PlatformTenantController listing bounded via TenantManagementService,
  MeController user lookups moved behind UserAccountService.findAccount
- New tests: aspect union semantics, public-key predicate parity, FeedUrls
  grammar vs controller mappings, PrivateObjectUrlSigner decision tree +
  TTL parameterisation, batched entitlement evaluation, RequestScope table
- Repairs pre-existing main-branch failures: UploadService key-pattern drift,
  SubscriberFeedService lock-lookup stubs, HttpClientFixtures file list,
  PlatformTenantUserController H2/pg_advisory_xact_lock (test-only alias),
  ConflictException expectations